@@ -98,7 +98,7 @@ extern char * strlcpy(char * s1, const char * s2, size_t n);
 extern char * strstr(const char *in, const char *str);
 extern int    atoi(const char * str);
 extern int    ptol(const char * str);
-extern int    strlen(const char * str);
+extern size_t    strlen(const char * str);
 extern char * strcat(char * s1, const char * s2);
 extern char * strncat(char * s1, const char * s2, size_t n);
 extern char * strdup(const char *s1);
@@ -128,7 +128,7 @@ extern unsigned long long strtouq(const char *nptr, char ** endptr, int base);
 /*
  * prf.c
  */
-extern void prf(const char * fmt, va_list ap, void (*putfn_p)(),
+extern void prf(const char * fmt, va_list ap, int (*putfn_p)(),
                 void * putfn_arg);
 
 /*
